# corylus-focus-noise

./: .gitignore  BUNDLE_MANIFEST.json  CLAUDE.md  Cargo.toml  PRESETS.json  README.md  VERIFIED_CATALOG.json  add_sound.sh  download_and_convert.sh  names.json  repackage.sh
src/: catalog.rs  error.rs  lib.rs  mixes.rs  names.rs  provision.rs  state.rs  tests.rs
